--- a/css/form.css
+++ b/css/form.css
@@ -12,7 +12,7 @@
     width: 50vw;
     margin: 5vw;
     
-    background: url(/img/formbg.jpg);
+    background: url(/img/formbg.png);
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: 80vw;
